# OmniView

./: .clang-formatter.swp  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  clang-format.txt  vcpkg.json
.github/workflows/: build.yaml  clang-format-check.yaml  formatter.yaml  release.yaml
ai_omniscope-websocket_sw/: CMakeLists.txt
ai_omniscope-websocket_sw/src/: ws.cpp  ws_USB.cpp
config/: config.json
images/: AutoInternLogo_data.h  DiagnosticIcon_data.h  DiagnosticsWhite_data.h  HelpIcon_data.h  HelpWhite_data.h  OmnAIScope_logo-wei├ƒ_data.h  OmnAiLogo_data.h  PauseButton_data.h  PlayButton_data.h  RefreshIcon_data.h  ResetButton_data.h  SaveButton_data.h  SearchDevicesWhite_data.h  SettingIcon_data.h  SettingsWhite_data.h
images/test/: logo.h
languages/: Deutsch.json
mytoolchain/: mytoolchain.cmake
src/: CommandLineParser.cpp  LoadFiles.cpp  LoadFiles.hpp  LoadImages.hpp  OmniscopeCommands.hpp  OmniscopeCommunication.hpp  TypeDescriptor_OmniscopeCommands.hpp  VCDS_data.hpp  analyze_data.cpp  analyze_data.hpp  apihandler.hpp  commandLineParser.cpp  commandLineParser.hpp  create_training_data.hpp  dllhandler.cpp  dllhandler.hpp  generateTrainingData.cpp  get_from_github.hpp  handler.cpp  handler.hpp  helppopup.hpp  imagesHeader.hpp  imagesHeaderToolbar.hpp  imgui_stdlib.cpp  info_popup.cpp  jasonhandler.hpp  jsonhandler.cpp  jsonhandler.hpp  languages.hpp  loadingFiles.cpp  loadingFiles.hpp  look_up_saves.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  popups.hpp  save_warning_popup.cpp  saves_popup.cpp  saves_popup.hpp  script.py  (+11 more)
src/menus/: DevicesMenu.cpp  SideBarMenu.cpp  Style.hpp
src/menuscpp/: DevicesMenu.cpp  SideBarMenu.cpp  Style.cpp
src/menushpp/: Style.hpp
